--- a/config/database.yml
+++ b/config/database.yml
@@ -4,7 +4,7 @@ development:
       database: fedena_ultimate
       port: 3306
       username: root
-      password: mo0han
+      password: 
 
 test: &test
       host: localhost
@@ -12,7 +12,7 @@ test: &test
       database: fedena_two_new
       port: 3306
       username: root
-      password: mo0han
+      password: 
 
 production:
       host: localhost
